[package]
name = "convertable"
version = "0.1.0"
edition = "2024"

[dependencies]


alloy-primitives = { version = "1.3.0", default-features = false, optional = true }
bigdecimal = { version = "0.4.8", optional = true }
malachite = { version = "0.4", optional = true }


[features]
default = ["full"]

full = ["malachite", "alloy", "bigdecimal"]
malachite = ["dep:malachite"]
alloy = ["dep:alloy-primitives"]
bigdecimal = ["dep:bigdecimal"]
